[gd_scene load_steps=10 format=2]

[ext_resource path="res://Images/Enemies/Red Slime/Redslime2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/RedSlime.gd" type="Script" id=2]
[ext_resource path="res://Images/Enemies/Red Slime/Redslime1.png" type="Texture" id=3]
[ext_resource path="res://Images/UI/EnemyHealthBar/greenbar.png" type="Texture" id=4]
[ext_resource path="res://Images/UI/EnemyHealthBar/backgroundbar.png" type="Texture" id=5]
[ext_resource path="res://Images/Enemies/Red Slime/RedSlimeGun3.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.65628
height = 13.1527

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 9.20206, 6.59011, 11.1469, 6.71976, 12.0545, 5.74733, 14.1939, 5.55285, 13.9346, 4.58042, 12.0545, 4.12661, 11.2766, 2.9597, 11.1469, 1.85761, 10.1097, 1.72795, 9.91518, 2.76521, 4.27508, 2.83004, 4.27508, 3.67281, -2.0133, 3.93213, -2.07813, 2.76521, -4.93059, 2.76521, -4.80094, 6.97908, -7.78306, 10.6743, -7.78306, 12.3599, 9.78552, 12.3599, 9.59104, 7.95151 )

[node name="Red_Slime" type="KinematicBody2D" groups=[
"enemy",
]]
modulate = Color( 3, 1.25, 1.25, 1 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 0, 5.6 )

[node name="Barrel" type="Sprite" parent="Pivot"]
position = Vector2( 4, 0 )
texture = ExtResource( 6 )

[node name="Muzzle" type="Position2D" parent="Pivot/Barrel"]
position = Vector2( 8, -0.5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.40458, 7.67781 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = -12.0
margin_top = -3.5
margin_right = 12.0
margin_bottom = 1.5
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
